13711
The following works:
{code}
scala> val f : Int => Int = (x:Int) => x * x
f: (Int) => Int = <function>
scala> f match { case (g : Function1[_,_]) => g(2) }
res0: Any = 4
{code}

But the following doesn't:
{code}
scala> val f : Int => Int = (x:Int) => x * x
f: (Int) => Int = <function>
scala> f match { case (g : (_ => _)) => g(2) }
<console>:1: error: ')' expected but '=>' found.
       f match { case (g : (_ => _)) => g(2) }
                              ^
<console>:1: error: ')' expected but '}' found.
       f match { case (g : (_ => _)) => g(2) }
{code}
